Wed Oct  2 16:26:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close_read): duplex IO should wait its child process
	  even after close_read.

Wed Oct  2 15:39:13 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_core.h: use __has_attribute() instead of __clang__major__ because
	  clang says "Note that marketing version numbers should not be used
	  to check for language features, as different vendors use different
	  numbering schemes. Instead, use the Feature Checking Macros."
	  http://clang.llvm.org/docs/LanguageExtensions.html

Wed Oct  2 14:19:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close_write): detach tied IO for writing before closing
	  to get rid of race condition.  [ruby-list:49598]

	* io.c (rb_io_close_read): keep fptr in write_io to be discarded, to
	  fix freed pointer access when it is in use by other threads, and get
	  rid of potential memory/fd leak.

Tue Oct  1 23:44:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_core.h: use __attribute__((unused)) in UNINTIALIZED_VAR on clang
	  4.0+ instead of just on 4.2. Clang has supported the unused attribute
	  since before version 4, so this should be safe.

Tue Oct  1 22:03:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#unlink): finalizer is no longer needed
	  after unlinking.  patched by by normalperson (Eric Wong) at
	  [ruby-core:56521] [Bug #8768]

Tue Oct  1 20:54:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (stat_new_0): constify.

	* file.c (rb_stat_new): constify and export.  based on a patch by
	  Hanmac (Hans Mackowiak) at [ruby-core:53225].  [Feature #8050]

Tue Oct  1 16:03:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_safe_level_4_warning): needed by extension
	  libraries which check safe level 4.  [ruby-dev:47517] [Bug #8652]

Mon Sep 30 23:14:36 2013  Zachary Scott  <e@zzak.io>

	* ext/objspace/objspace.c: [DOC] Cleaned up many rdoc formatting